@@ -16,6 +16,11 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 == {compare-url}/v0.7.1\...HEAD[Unreleased]
 
+=== Added
+
+* Add a specialized `Result` type for read and write operations for the scrypt
+  encrypted data format ({pull-request-url}/56[#56])
+
 === Changed
 
 * Re-export `hmac` crate ({pull-request-url}/51[#51])
